# meal-planner-ai

./: .gitignore  README.md
backend/: .env.example  langgraph.json  pyproject.toml
backend/meal_agent/: __init__.py  agent.py  constants.py  state.py  tools.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CategoryIcon.tsx  CollapsibleSection.tsx  DayBox.tsx  DayColumn.tsx  InfoModal.tsx  MealDisplay.tsx  RecipeCard.tsx  RecipeDetailModal.tsx  SegmentedControl.tsx  ShoppingButton.tsx  ShoppingList.tsx  ShoppingListModal.tsx  TimeSlider.tsx
frontend/src/hooks/: useMealPlanner.ts
frontend/src/types/: index.ts
